Obtencion de datos API firebase

--- a/.gitignore
+++ b/.gitignore
@@ -6,6 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
+.babelrc
+        package-lock.json
+        package.json
+        public/
+        src/
+        webpack.config.js
 # Diagnostic reports (https://nodejs.org/api/report.html)
 report.[0-9]*.[0-9]*.[0-9]*.[0-9]*.json
 
